<resources>
    <string name="app_name">ZamgaVoca</string>
    <string name="overlay_permission_needed">오버레이 권한이 필요합니다</string>
    <string name="overlay_permission_granted">오버레이 권한 허용됨</string>
    <string name="morning_greeting">좋은 아침입니다!</string>
    <string name="morning_difficulty_prompt">오늘의 학습 난이도를 선택하세요</string>
    <string name="difficulty_easy">하급 (Beginner)</string>
    <string name="difficulty_medium">중급 (Intermediate)</string>
    <string name="difficulty_hard">상급 (Advanced)</string>
    <string name="word_list_title">오늘의 단어 목록</string>
    <string name="drag_instruction">위아래로 계속 드래그하세요 (3초)</string>
    <string name="tap_instruction">연속으로 탭하세요!</string>
    <string name="bounce_instruction">모서리에 4번 튕기세요!</string>
    <string name="notification_title">ZamgaVoca 학습 중</string>
    <string name="notification_text">단어 오버레이가 활성화되어 있습니다</string>
    <string name="notification_stop">중단</string>
</resources>